--- a/ios/PokedexApp.xcodeproj/xcshareddata/xcschemes/PokedexApp.xcscheme
+++ b/ios/PokedexApp.xcodeproj/xcshareddata/xcschemes/PokedexApp.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "PokedexApp.app"
+               BuildableName = "PokedexApp-JoniDev.app"
                BlueprintName = "PokedexApp"
                ReferencedContainer = "container:PokedexApp.xcodeproj">
             </BuildableReference>
@@ -55,7 +55,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "PokedexApp.app"
+            BuildableName = "PokedexApp-JoniDev.app"
             BlueprintName = "PokedexApp"
             ReferencedContainer = "container:PokedexApp.xcodeproj">
          </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "PokedexApp.app"
+            BuildableName = "PokedexApp-JoniDev.app"
             BlueprintName = "PokedexApp"
             ReferencedContainer = "container:PokedexApp.xcodeproj">
          </BuildableReference>
